--- a/cpp/kmeans/CMakeLists.txt
+++ b/cpp/kmeans/CMakeLists.txt
@@ -37,6 +37,6 @@ find_package(OpenSSL REQUIRED)
 find_package(HDF5 REQUIRED COMPONENTS CXX)
 include_directories(${HDF5_INCLUDE_DIR})
 
-add_executable(kmeans_seal kmeans_seal.cpp kmeans_demo.cpp)
-target_link_libraries(kmeans_seal helayers_seal_ext helayers SEAL::seal onnx Boost::headers Boost::filesystem OpenSSL::Crypto)
-target_link_libraries(kmeans_seal ${HDF5_LIBRARIES})
+add_executable(kmeans_seal_low_level_api kmeans_seal_low_level_api.cpp kmeans_demo_low_level_api.cpp)
+target_link_libraries(kmeans_seal_low_level_api helayers_seal_ext helayers SEAL::seal onnx Boost::headers Boost::filesystem OpenSSL::Crypto)
+target_link_libraries(kmeans_seal_low_level_api ${HDF5_LIBRARIES})
