--- a/cpp/linear_regression/CMakeLists.txt
+++ b/cpp/linear_regression/CMakeLists.txt
@@ -39,6 +39,6 @@ find_package(OpenSSL REQUIRED)
 find_package(HDF5 REQUIRED COMPONENTS CXX)
 include_directories(${HDF5_INCLUDE_DIR})
 
-add_executable(linear_regression linear_regression.cpp)
-target_link_libraries(linear_regression helayers_seal_ext helayers SEAL::seal onnx Boost::headers Boost::filesystem OpenSSL::Crypto)
-target_link_libraries(linear_regression ${HDF5_LIBRARIES})
+add_executable(linear_regression_low_level_api linear_regression_low_level_api.cpp)
+target_link_libraries(linear_regression_low_level_api helayers_seal_ext helayers SEAL::seal onnx Boost::headers Boost::filesystem OpenSSL::Crypto)
+target_link_libraries(linear_regression_low_level_api ${HDF5_LIBRARIES})
